@@ -26,11 +26,11 @@ import sys
 import string
 import xapian
 
-# magic environment to get new pathbar
-if "SOFTWARE_CENTER_NEW_PATHBAR" in os.environ:
-    from widgets.pathbar2 import NavigationBar
-else:
+# magic environment to get old pathbar
+if "SOFTWARE_CENTER_OLD_PATHBAR" in os.environ:
     from widgets.navigationbar import NavigationBar
+else:
+    from widgets.pathbar2 import NavigationBar
 
 from widgets.searchentry import SearchEntry
 
